--- a/proyectoLoboSolitario/style.css
+++ b/proyectoLoboSolitario/style.css
@@ -1,9 +1,22 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+
 .titulo {
     color: palevioletred;
 }
 
 .color {
     background-color: palevioletred;
+}
+main {
+    width: 100%;
+    height: 100%;
+    border: 10px solid gray;
+    padding: 20px 35px;
 }
 
 .main-nav {    
