Combinador Hijo (~) y Descendiente Chill and Descendant

--- a/CSS/claseCombinadores/style.css
+++ b/CSS/claseCombinadores/style.css
@@ -11,3 +11,16 @@ Hermano general (General sibling)
 h2 ~ p {
     color: aqua
 }
+/*
+Hijo (Child)
+*/
+div > p {
+    color: red;
+}
+
+/*
+Descendiente (Descendant)
+*/
+div p {
+    color: red;
+}
