--- a/CSS/Reto/style.css
+++ b/CSS/Reto/style.css
@@ -9,26 +9,40 @@
     display: table;
 }
 .oneFigure {
-    background-color: #C70039;
+    /*background-color: #C70039;*/
     position: relative;
     margin: 0 auto;        
     display: table;
     border-radius: 0.8rem;
 }
-figcaption {
+.oneFigure img {
+    width: 650px;
+}
+/*figcaption {
     text-align: center;
     font-weight: 700;
-}
+}*/
 .oneDiv {
     border-radius: 8px; 
     width: 600px;
-    height: 250px;    
+    height: 280px;    
     margin: 0 auto;
-    margin-top: 10px;
+    margin-top: 6px;
     margin-bottom: 10px;
     padding: 15px;
     background-color: #F7DC6F;
     color: #EBDEF0;
+    position: relative;
+    bottom: 10px;
+}
+.oneTitle {
+    background-color: #C70039;
+    text-align: center;
+    border-radius: 3px;
+    width: 400px;
+    position: relative;
+    margin: auto;
+    top: 10px;
 }
 .oneP {
     text-align: center;  
