--- a/ResponsiveDesign/mostlyFluid/style.css
+++ b/ResponsiveDesign/mostlyFluid/style.css
@@ -16,38 +16,34 @@ html {
     height: 150px;
 }
 .c1 {
-    background-color: #003476;
+    background-color: aqua;
 }
 .c2 {
-    background-color: #0062d2;
+    background-color: black;
 }
 .c3 {
-    background-color: #b4d2f7;
+    background-color: darkblue;
 }
 .c4 {
-    background-color: #d5dfef;
+    background-color: aqua;
 }
 .c5 {
-    background-color: #dfe1e5;
+    background-color: black;
 }
 /*
-@media (min-width: 600px) {
+@media (min-width: 600px){
     .c2, .c3, .c4 {
         width: 50%;
     }
 }
-
-@media (min-width:800px) {
+@media (min-width: 800px){
     .container {
         width: 800px;
         margin-left: auto;
         margin-right: auto;
     }
-    .c1 {
-        width: 60%;
-    }
-    .c2 {
-        width: 40%;
+    .c1, .c2 {
+        width: 50%;
     }
     .c3, .c4 {
         width: 33%;
